Bug 155192 - several sections of kinfocenter badly broken (display no information/crash)
Summary: several sections of kinfocenter badly broken (display no information/crash)
Status: RESOLVED FIXED
Alias: None
Product: kcontrol
Classification: Unmaintained
Component: kcminfo (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Helge Deller
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-06 18:19 UTC by Ivo Anjo
Modified: 2008-03-16 16:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Anjo 2008-01-06 18:19:28 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

Several sections on kinfocenter running on latest kde4daily (basically 4.0.0) behave strangely.

Sections who display no information at all: Devices, DMA-Channels
Sections that take you to the initial view ("Welcome to KDE Info Center..."): IEEE 1394 Devices
Sections who just display the message "No information available": Interrupts, IO-Ports, Processor, SCSI, Sound
Sections that crash: OpenGL

OpenGL Section Backtrace: (sorry seems that kde4live only has kde and qt debugging symbols)
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1247074608 (LWP 4243)]
[KCrash handler]
#6  0xffffe410 in __kernel_vsyscall ()
#7  0xb5dcedf0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb5dd0641 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb5e0f175 in ?? () from /lib/tls/i686/cmov/libc.so.6
#10 0x08441290 in ?? ()
#11 0x08441298 in ?? ()
#12 0xbf98e7b0 in ?? ()
#13 0xb5e0f112 in ?? () from /lib/tls/i686/cmov/libc.so.6
#14 0xb5ee3120 in ?? () from /lib/tls/i686/cmov/libc.so.6
#15 0x08441298 in ?? ()
#16 0xb5f2d1d4 in ?? () from /usr/lib/libstdc++.so.6
#17 0xb6055808 in ?? ()
#18 0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Ivo Anjo 2008-03-16 16:26:38 UTC
SVN commit 786273 by ianjo:

Fixed usage of stream.atEnd() in various places, it doesn't work for files in /proc (as per QFile docs).

Fixes interrupts, io-ports, scsi, sound, dma channels and devices not working on linux. Kinfocenter is back to its former qt3 glory.

BUG: 155192



 M  +15 -11    info_linux.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=786273