Fixed usage of stream.atEnd() in various places, it doesn't work for files in /proc (as per QFile docs).

Fixes interrupts, io-ports, scsi, sound, dma channels and devices not working on linux. Kinfocenter is back to its former qt3 glory.

BUG: 155192


svn path=/branches/KDE/4.0/kdebase/apps/; revision=786273